--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -36,10 +36,10 @@ $theme: (
     secondary-lighter: "orange-400",
     secondary-darker: "orange-600",
     on-secondary: "white",
-    secondary-container: "orange-250",
+    secondary-container: "orange-100",
     secondary-container-lighter: "orange-100",
     secondary-container-darker: "orange-300",
-    secondary-container-hover: "orange-300",
+    secondary-container-hover: "orange-200",
     on-secondary-container: "orange-900",
     secondary-hover: "orange-600",
     secondary-border: "orange-300",
@@ -90,17 +90,41 @@ $theme: (
     logo-bottom: "orange-500",
     logo-background: "white",
 
+    positive: "green-700",
+    on-positive: "white",
+    positive-container: "green-100",
+    on-positive-container: "green-950",
+    negative: "red-800",
+    on-negative: "white",
+    negative-container: "red-100",
+    on-negative-container: "red-950",
+
+    scale-positive-1: "green-50",
+    scale-positive-2: "green-100",
+    scale-positive-3: "green-150",
+    scale-positive-4: "green-200",
+    scale-positive-5: "green-250",
+    scale-positive-6: "green-300",
+    scale-positive-7: "green-350",
+    scale-negative-1: "red-50",
+    scale-negative-2: "red-100",
+    scale-negative-3: "red-150",
+    scale-negative-4: "red-200",
+    scale-negative-5: "red-250",
+    scale-negative-6: "red-300",
+    scale-negative-7: "red-350",
+
     debug: #ff00ff,
   ),
   dark: (
     background: "gray-950",
-    surface: "dark-900",
-    surface-variant: "dark-750",
+    surface: "gray-900",
+    surface-variant: "gray-750",
     surface-container-lowest: "black",
-    surface-container-low: "dark-850",
-    surface-container: "dark-surface",
-    surface-container-high: "dark-750",
-    surface-container-highest: "dark-650",
+    surface-container-low: "gray-850",
+    surface-container: "gray-700",
+    surface-container-high: "gray-750",
+    surface-container-highest: "gray-650",
     on-surface: "gray-100",
     on-surface-variant: "gray-400",
     outline: "gray-600",
@@ -114,7 +138,7 @@ $theme: (
     primary-container-lighter: "cyan-900",
     primary-container-darker: "black",
     primary-container-hover: "cyan-900",
-    on-primary-container: "cyan-300",
+    on-primary-container: magenta,
     primary-hover: "cyan-450",
     primary-border: "cyan-700",
     primary-subtle: "cyan-900",
@@ -176,5 +200,31 @@ $theme: (
     logo-top: "cyan-500",
     logo-bottom: "orange-500",
     logo-background: "white",
+
+    positive: "green-400",
+    on-positive: "green-950",
+    positive-container: "green-900",
+    on-positive-container: "green-100",
+    negative: "red-250",
+    on-negative: "red-950",
+    negative-container: "red-900",
+    on-negative-container: "red-100",
+
+    scale-positive-1: "green-950",
+    scale-positive-2: "green-900",
+    scale-positive-3: "green-850",
+    scale-positive-4: "green-800",
+    scale-positive-5: "green-750",
+    scale-positive-6: "green-700",
+    scale-positive-7: "green-650",
+    scale-negative-1: "red-950",
+    scale-negative-2: "red-900",
+    scale-negative-3: "red-850",
+    scale-negative-4: "red-800",
+    scale-negative-5: "red-750",
+    scale-negative-6: "red-700",
+    scale-negative-7: "red-650",
+
+    debug: #ff00ff,
   ),
 );
