--- a/src/app/drafts/opponent-overview/opponent-overview.component.html
+++ b/src/app/drafts/opponent-overview/opponent-overview.component.html
@@ -1,17 +1,19 @@
 <div class="opponent-main">
   <div class="draft-header">
-    <button mat-flat-button [routerLink]="['/', draftPath]">Back</button>
-
+    <pdz-flat-button
+      [routerLink]="['/', draftPath]"
+      text="Back"
+    ></pdz-flat-button>
     @if (draft | async; as draft) {
       <div class="draft-info-container">
         <h2>
           {{ draft.leagueName }}
         </h2>
         <div class="details-container">
-          <h4 class="text-2xl font-bold text-symbolColor-sub">
+          <h4 class="stat">
             {{ draft.format }}
           </h4>
-          <h4 class="text-2xl font-bold text-symbolColor-sub">
+          <h4 class="stat">
             {{ draft.ruleset }}
           </h4>
         </div>
@@ -20,7 +22,7 @@
         <h3>
           {{ draft.teamName }}
         </h3>
-        <h4 class="text-2xl font-bold text-symbolColor-sub">
+        <h4 class="stat">
           {{ draft.score.wins }} - {{ draft.score.loses }} |
           {{ draft.score.diff }}
         </h4>
@@ -31,23 +33,19 @@
         }
       </div>
       <div class="draft-buttons">
-        <button
-          mat-mini-fab
+        <pdz-icon-button
           routerLink="../edit"
           [queryParams]="{ draft: draft.leagueId | json }"
-        >
-          <mat-icon>edit</mat-icon>
-        </button>
-        <a
-          mat-mini-fab
+          icon="edit"
+        ></pdz-icon-button>
+        <pdz-icon-button
           [href]="draft.doc"
-          target="_blank"
+          newTab
           [disabled]="!draft.doc"
-          [attr.aria-disabled]="!draft.doc"
-          [class.mat-disabled]="!draft.doc"
-        >
-          <mat-icon>dataset_linked</mat-icon>
-        </a>
+          icon="dataset_linked"
+          tooltip="Document"
+          ariaLabel="Document"
+        ></pdz-icon-button>
       </div>
     }
   </div>
