--- a/src/app/pages/top-navbar/top-navbar.component.scss
+++ b/src/app/pages/top-navbar/top-navbar.component.scss
@@ -31,8 +31,8 @@ mat-toolbar {
   padding: var(--pdz-space-sm);
   border-radius: var(--pdz-shape-corner-sm);
   font-family: var(--pdz-font-fancy);
+  @include background-hover-effect(var(--pdz-color-primary-container));
   &:hover {
-    background-color: var(--pdz-color-primary-container);
     color: var(--pdz-color-on-primary-container);
   }
 }
@@ -61,9 +61,8 @@ mat-toolbar {
   align-items: center;
   border-radius: var(--pdz-shape-corner-sm);
   padding: 0 0.5rem;
-
+  @include background-hover-effect(var(--pdz-color-primary-container));
   &:hover {
-    background-color: var(--pdz-color-primary-container);
     color: var(--pdz-color-on-primary-container);
   }
 }
