update scaling mixin

--- a/src/app/debug/themes/debug-themes.component.scss
+++ b/src/app/debug/themes/debug-themes.component.scss
@@ -4,7 +4,7 @@
   background-color: var(--pdz-color-background);
   color: var(--pdz-color-on-surface);
 
-  padding: var(--pdz-space-xxl);
+  padding: var(--pdz-space-2xl);
   // transition:
   //   background-color 0.3s ease,
   //   color 0.3s ease;
