--- a/src/app/drafts/matchup-overview/matchup-overview.component.html
+++ b/src/app/drafts/matchup-overview/matchup-overview.component.html
@@ -3,6 +3,7 @@
     <button mat-flat-button [routerLink]="['/', draftPath, leagueId]">
       Back
     </button>
+    <pdz-flat-button text="Back"></pdz-flat-button>
     <div class="details-spacer">
       <div class="details-container">
         @if (matchupData) {
