--- a/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
+++ b/src/app/drafts/opponent-overview/opponent-preview/opponent-preview.component.scss
@@ -186,7 +186,7 @@ pdz-sprite {
   > div {
     background-color: var(--pdz-color-secondary-container);
     color: var(--pdz-color-on-secondary-container);
-    padding: var(--pdz-space-xxs);
+    padding: var(--pdz-space-2xs);
     border-radius: var(--pdz-shape-corner-sm);
   }
 }
