--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
@@ -237,7 +237,7 @@
 .icon-button {
   border-radius: 100rem;
   display: inline-flex;
-  padding: var(--pdz-space-xxs);
+  padding: var(--pdz-space-2xs);
   mat-icon {
     font-size: 1.2em;
     color: var(--pdz-color-secondary);
