--- a/src/app/util/matchup/typechart/typestats-core/typestats-core.component.html
+++ b/src/app/util/matchup/typechart/typestats-core/typestats-core.component.html
@@ -42,7 +42,7 @@
         }
       </tr>
       <tr>
-        <th><div class="stat-label bg-scale-negative-3">Weaks</div></th>
+        <th><div class="stat-label pdz-scale-negative-3">Weaks</div></th>
         @for (type of types; track $index) {
           <td
             class="stat-cell"
@@ -62,7 +62,7 @@
         }
       </tr>
       <tr>
-        <th><div class="stat-label bg-scale-positive-3">Resists</div></th>
+        <th><div class="stat-label pdz-scale-positive-3">Resists</div></th>
         @for (type of types; track $index) {
           <td
             class="stat-cell"
