--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,12 +1,13 @@
 $spacing: (
   none: 0,
-  xxxs: 0.0675rem,
-  xxs: 0.125rem,
+  3s: 0.0675rem,
+  2xs: 0.125rem,
   xs: 0.25rem,
   sm: 0.5rem,
   md: 0.75rem,
   lg: 1rem,
   xl: 1.5rem,
-  xxl: 2rem,
-  xxxl: 5rem,
+  2xl: 2rem,
+  3xl: 3rem,
+  4xl: 5rem,
 );
