--- a/src/styles/pdz-themes/_normal.scss
+++ b/src/styles/pdz-themes/_normal.scss
@@ -99,20 +99,21 @@ $theme: (
     negative-container: "red-100",
     on-negative-container: "red-950",
 
-    scale-positive-1: "green-50",
-    scale-positive-2: "green-100",
-    scale-positive-3: "green-150",
-    scale-positive-4: "green-200",
-    scale-positive-5: "green-250",
-    scale-positive-6: "green-300",
-    scale-positive-7: "green-350",
-    scale-negative-1: "red-50",
-    scale-negative-2: "red-100",
-    scale-negative-3: "red-150",
-    scale-negative-4: "red-200",
-    scale-negative-5: "red-250",
-    scale-negative-6: "red-300",
-    scale-negative-7: "red-350",
+    scale-positive-1: "green-100",
+    scale-positive-2: "green-200",
+    scale-positive-3: "green-300",
+    scale-positive-4: "green-400",
+    scale-positive-5: "green-500",
+    scale-positive-6: "green-600",
+    scale-positive-7: "green-700",
+    scale-neutral: "gray-100",
+    scale-negative-1: "red-100",
+    scale-negative-2: "red-200",
+    scale-negative-3: "red-300",
+    scale-negative-4: "red-400",
+    scale-negative-5: "red-500",
+    scale-negative-6: "red-600",
+    scale-negative-7: "red-700",
 
     debug: #ff00ff,
   ),
