--- a/src/app/drafts/matchup-overview/matchup.scss
+++ b/src/app/drafts/matchup-overview/matchup.scss
@@ -222,7 +222,7 @@
                   @media (max-width: 768px) {
                     font-size: 0.7em;
                     line-height: 0.7em;
-                    padding: var(--pdz-space-xxs);
+                    padding: var(--pdz-space-2xs);
                   }
                 }
               }
