--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedchart.component.scss
@@ -87,7 +87,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      gap: var(--pdz-space-xxxs);
+      gap: var(--pdz-space-3xs);
       overflow: auto;
       scrollbar-gutter: stable;
       .tier-group {
