--- a/src/app/util/matchup/summary-core/summary-core.component.html
+++ b/src/app/util/matchup/summary-core/summary-core.component.html
@@ -76,18 +76,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="left-rounded stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.hp)"
+        [style.background-color]="statColor(pokemon.baseStats.hp)"
       >
         {{ pokemon.baseStats.hp }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef class="left-rounded">
-        <div [ngClass]="statColor(summary.stats.mean.hp)">
+        <div [style.background-color]="statColor(summary.stats.mean.hp)">
           {{ summary.stats.mean.hp }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.hp)">
+        <div [style.background-color]="statColor(summary.stats.median.hp)">
           {{ summary.stats.median.hp }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.hp)">
+        <div [style.background-color]="statColor(summary.stats.max.hp)">
           {{ summary.stats.max.hp }}
         </div>
       </td>
@@ -101,18 +101,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.atk)"
+        [style.background-color]="statColor(pokemon.baseStats.atk)"
       >
         {{ pokemon.baseStats.atk }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef>
-        <div [ngClass]="statColor(summary.stats.mean.atk)">
+        <div [style.background-color]="statColor(summary.stats.mean.atk)">
           {{ summary.stats.mean.atk }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.atk)">
+        <div [style.background-color]="statColor(summary.stats.median.atk)">
           {{ summary.stats.median.atk }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.atk)">
+        <div [style.background-color]="statColor(summary.stats.max.atk)">
           {{ summary.stats.max.atk }}
         </div>
       </td>
@@ -126,18 +126,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.def)"
+        [style.background-color]="statColor(pokemon.baseStats.def)"
       >
         {{ pokemon.baseStats.def }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef>
-        <div [ngClass]="statColor(summary.stats.mean.def)">
+        <div [style.background-color]="statColor(summary.stats.mean.def)">
           {{ summary.stats.mean.def }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.def)">
+        <div [style.background-color]="statColor(summary.stats.median.def)">
           {{ summary.stats.median.def }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.def)">
+        <div [style.background-color]="statColor(summary.stats.max.def)">
           {{ summary.stats.max.def }}
         </div>
       </td>
@@ -150,18 +150,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.spa)"
+        [style.background-color]="statColor(pokemon.baseStats.spa)"
       >
         {{ pokemon.baseStats.spa }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef>
-        <div [ngClass]="statColor(summary.stats.mean.spa)">
+        <div [style.background-color]="statColor(summary.stats.mean.spa)">
           {{ summary.stats.mean.spa }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.spa)">
+        <div [style.background-color]="statColor(summary.stats.median.spa)">
           {{ summary.stats.median.spa }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.spa)">
+        <div [style.background-color]="statColor(summary.stats.max.spa)">
           {{ summary.stats.max.spa }}
         </div>
       </td>
@@ -174,18 +174,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.spd)"
+        [style.background-color]="statColor(pokemon.baseStats.spd)"
       >
         {{ pokemon.baseStats.spd }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef>
-        <div [ngClass]="statColor(summary.stats.mean.spd)">
+        <div [style.background-color]="statColor(summary.stats.mean.spd)">
           {{ summary.stats.mean.spd }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.spd)">
+        <div [style.background-color]="statColor(summary.stats.median.spd)">
           {{ summary.stats.median.spd }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.spd)">
+        <div [style.background-color]="statColor(summary.stats.max.spd)">
           {{ summary.stats.max.spd }}
         </div>
       </td>
@@ -198,18 +198,18 @@
         cdk-cell
         *cdkCellDef="let pokemon"
         class="stat-cell"
-        [ngClass]="statColor(pokemon.baseStats.spe)"
+        [style.background-color]="statColor(pokemon.baseStats.spe)"
       >
         {{ pokemon.baseStats.spe }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef>
-        <div [ngClass]="statColor(summary.stats.mean.spe)">
+        <div [style.background-color]="statColor(summary.stats.mean.spe)">
           {{ summary.stats.mean.spe }}
         </div>
-        <div [ngClass]="statColor(summary.stats.median.spe)">
+        <div [style.background-color]="statColor(summary.stats.median.spe)">
           {{ summary.stats.median.spe }}
         </div>
-        <div [ngClass]="statColor(summary.stats.max.spe)">
+        <div [style.background-color]="statColor(summary.stats.max.spe)">
           {{ summary.stats.max.spe }}
         </div>
       </td>
@@ -221,19 +221,19 @@
       <td
         cdk-cell
         *cdkCellDef="let pokemon"
-        [ngClass]="bstColor(pokemon.bst)"
+        [style.background-color]="bstColor(pokemon.bst)"
         class="right-rounded stat-cell"
       >
         {{ pokemon.bst }}
       </td>
       <td cdk-footer-cell *cdkFooterCellDef class="right-rounded">
-        <div [ngClass]="bstColor(summary.stats.mean.bst)">
+        <div [style.background-color]="bstColor(summary.stats.mean.bst)">
           {{ summary.stats.mean.bst }}
         </div>
-        <div [ngClass]="bstColor(summary.stats.median.bst)">
+        <div [style.background-color]="bstColor(summary.stats.median.bst)">
           {{ summary.stats.median.bst }}
         </div>
-        <div [ngClass]="bstColor(summary.stats.max.bst)">
+        <div [style.background-color]="bstColor(summary.stats.max.bst)">
           {{ summary.stats.max.bst }}
         </div>
       </td>
